fixed ul styles and looking for new font size on mobile

--- a/css/book.css
+++ b/css/book.css
@@ -172,7 +172,7 @@
       }
       a, p, pre, b, ul, ol, li {
         font-family: 'Alice';
-        font-size: 1.2em;
+        font-size: 1em;
         line-height: 1.4;
       }
 
